--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <ul>
         <li><b>TATA Consultancy Services Ltd</b></li>
         <ul>
-            <li>Function Consultant</li>
+            <li>SAP Functional Consultant</li>
             <li>2022-2023</li>
         </ul>
     </ul>
