--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <ul>
     <li><b>Augmented Reality based Car Parking Application for Android</b></li>
     <ul>
-        <li><a href="https://revistageintec.net/article/augmented-reality-based-car-parking-application-for-android/">The Paper was Published in "Web of Science(WOS)" Journal</a></li>
+        <li>The Paper was Published in "Web of Science(WOS)" Journal</li>
     </ul>
 </ul>
 <hr />
