--- a/index.html
+++ b/index.html
@@ -39,30 +39,29 @@
     <ul>
         <li><b>TATA Consultancy Services Ltd</b></li>
         <ul>
-            <li>SAP Functional Consultant</li>
-            <li>2022-2023</li>
+            <li><b>SAP Functional Consultant</b> | 2022-2023</li>
+            <p>As a SAP Functional Consultant, I successfully collaborated with clients to understand their unique business requirements and translate them into practical SAP solutions. By leveraging my in-depth knowledge of SAP modules and best practices, I effectively resolved their operational issues, implemented system enhancements, and facilitated seamless business processes, resulting in improved productivity and customer satisfaction.</p>
         </ul>
     </ul>
     <hr />
     <h3>SKILLS</h3>
     <ul>
-        <li>Full Stack Development</li>
-        <li>Computer Networks & Network Security</li>
-        <li>Basics of Digital Marketing</li>
-        <li>Good written & Verbal Communication</li>
-        <li>Presentation</li>
+        <li>Full Stack Development : HTML5 | CSS3 | JavaScript</li>
+        <li>Computer Networks & Network Security | Cryptography</li>
+        <li>Digital Marketing: Social Media Marketing(SMM) | Content Marketing | Google Business Profile Creation </li>               
     </ul>
 <hr>
 <h3>PROJECT</h3>
 <ul>
     <li>Augmented Reality based Car Parking Application for Android</li>
+    <p> Developed an Android application using augmented reality technology to accurately measure the required parking space for a specific car. The application utilized Augmented Reality technology to overlay virtual markers on the user's smartphone screen, providing visual guidance for optimal parking. </p>
 </ul>
 <hr>
 <h3>PUBLICATIONS</h3>
 <ul>
     <li><b>Augmented Reality based Car Parking Application for Android</b></li>
     <ul>
-        <li>The Paper was Published in "Web of Science(WOS)" Journal</li>
+        <li>The Paper was Published in "Web of Science(WOS)" Journal.</a></li>
     </ul>
 </ul>
 <hr />
